Closed Bug 61642 Opened 25 years ago Closed 25 years ago

Browser crashed when navigating between folders in a POP mail account for Netscape 6.0.

Categories

(MailNews Core :: Networking: POP, defect, P1)

All
Solaris
defect

Tracking

(Not tracked)

CLOSED FIXED

People

(Reporter: shirley.liu, Assigned: sspitzer)

References

Details

(Whiteboard: suntrak-n6-highp)

Attachments

(1 file)

In Netscape 6.0 commercial build 1116 for Sparc Solaris. 1. Launched Mail System. 2. Created a pop mail account. (server is single.eng). Browser crashed when navigating between folders inside the account.
Whiteboard: suntrak-n6-highp
QA Contact: esther → laurel
I don't have a problem with navigation across folders with POP account using nov30 commercial build, linux rh6.0. Could you provide some more details for reproducing this?
It looks like browser crash when the first 1,2,or 3 times accessing a new folder in POP mail account. That means if it crash then bring up the netscape and reenter the same folder again. It might crash the second time or not. If it does then bring up the nestacape and reenter again.
Hardware: Sun → All
This is null pointer dereferencing in nsMsgMailboxParser::UpdateStatusText() (mailnews/local/src/nsParseMailbox.cpp:234). We're asking for a string bundle (GetBundle() of nsLocalStringService, but sometimes string service failed to return string bundle (precisely, to create it when this one doesn't exists). But UpdateStatusText() doesn't check if GetBundle() was successeful I don't know why mozilla failed to create string bundle - can't reproduce this bug today (was able to do it yesterday on the SAME sources....)
This sounds like a duplicate of one which pmock-QA Assignee has... changing to pmock
QA Contact: laurel → pmock
jefft is no longer at netscape. reassigning to default component owner
Status: UNCONFIRMED → NEW
Ever confirmed: true
trying again
Assignee: jefft → naving
QA Contact: pmock → esther
Navin, one of our Russian engineers has provided a fix for this bug. Can you r= it please? We are trying to do an internal release of Netscape 6 at Sun, and this bug is a show-stopper for that release. Thanks.
r=sspitzer something is really bad if you didn't get the string bundle. are you still able to reproduce this problem?
Priority: P3 → P1
sr=blizzard even though I have the same question. Why can't it find the string bundle? That's bad.
sr=bienvenu, looks fine.
taking from naving. I promised rich I'd land this ASAP.
Assignee: naving → sspitzer
fix checked in. sorry for the delay.
Status: NEW → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Just looking at sources, one of possible reasons of not getting string bundle is NOT ENOUGH MEMORY error.
Fix has been integrated into the OEM tree.
Blocks: 60740
Shirley or drapeau, would either of you like to VERIFY this, if possible? Thanks.
Problem has been fixed and verified in Netscape6.0A.
Status: RESOLVED → CLOSED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: