Bug 61642 - Browser crashed when navigating between folders in a POP mail account.  Fix has already been put back to the trunk.  r=sspitzer, a=jdunn